# triloblobik.github.io

./: build.sh
.github/workflows/: deploy.yml
articles/: 404.html  about.html  index.html
content/: 404.html  index.html
content/articles/: about.html
generator/: .gitignore  CHANGELOG.md  triloblobik-web-gen.cabal
generator/app/: Article.hs  Generator.hs  Html.hs  Main.hs
static/styles/: style.css
templates/: article.html
