cabal-version:      3.0
name:               triloblobik-web-gen
version:            0.1.0.0
synopsis:           Generator of triloblobik's website
-- description:
homepage:           https://triloblobik.github.io/about.html
bug-reports:        https://github.com/triloblobik/triloblobik.github.io/issues
license:            NONE
author:             triloblobik
maintainer:         triloblobik@proton.me
copyright:          (c) 2023 triloblobik
category:           Web
extra-source-files: CHANGELOG.md

executable triloblobik-web-gen
    main-is:            Main.hs
    other-modules:      Article Generator Html
    -- other-extensions:
    build-depends:
        base            ^>=4.17.2.0,
        bytestring      ^>=0.12.0.2,
        containers      ^>=0.6.7,
        directory-tree  ^>=0.12.1,
        utf8-string     ^>=1.0.2,
    hs-source-dirs:   app
    default-language: Haskell2010
